Added active switch

--- a/.config
+++ b/.config
@@ -1,1 +1,1 @@
-{"client":{"timeout":5000}, "temp": [103,105], "sensor": {"model": 22, "pin": 4}}
+{"client":{"timeout":5000}, "temp": [103,105], "sensor": {"model": 22, "pin": 4}, "active": false}
