--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "forever": "^3.0.4",
     "node-dht-sensor": "^0.4.3",
+    "node-sass": "^4.14.1",
     "tplink-smarthome-api": "^3.1.0"
   }
 }
