--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bonjour": "^3.5.0",
     "express": "^4.17.1",
     "forever": "^3.0.4",
     "node-dht-sensor": "^0.4.3",
